<?xml version="1.0" encoding="utf-8"?>
<!--
 ! Excerpted from "Hello, Android!",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/eband for more book information.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/notice"
        android:title="@string/menu_notice"/>
    <item
        android:id="@+id/alarm"
        android:title="@string/menu_alarm"/>
    <item
        android:id="@+id/week"
        android:title="@string/menu_week"/>
    <item
        android:id="@+id/letter"
        android:title="@string/menu_letter"/>
    <item
        android:id="@+id/album"
        android:title="@string/menu_album"/>
    <item
        android:id="@+id/login"
        android:title="@string/menu_login"/>

</menu>